Wire in NodeExtraConfig interface
It's become apparent that some actions are required in the pre-deploy
phase for all nodes, for example applying common hieradata overrides,
or also as a place to hook in logic which must happen for all nodes
prior to their removal on scale down (such as unregistration from
a satellite server, which currently doesn't work via the
*NodesPostDeployment for scale-down usage).

So, add a new interface that enables ExtraConfig per-node (inside the
scaled unit, vs AllNodes which is used for the cluster-wide config
outside of the ResourceGroup)

Change-Id: Ic865908e97483753e58bc18e360ebe50557ab93c

--- a/puppet/ceph-storage.yaml
+++ b/puppet/ceph-storage.yaml
@@ -179,6 +179,14 @@ resources:
     properties:
         server: {get_resource: CephStorage}
 
+  # Hook for site-specific additional pre-deployment config,
+  # applying to all nodes, e.g node registration/unregistration
+  NodeExtraConfig:
+    depends_on: CephStorageExtraConfigPre
+    type: OS::TripleO::NodeExtraConfig
+    properties:
+        server: {get_resource: CephStorage}
+
   UpdateConfig:
     type: OS::TripleO::Tasks::PackageUpdate
 
