--- a/puppet/cinder-storage.yaml
+++ b/puppet/cinder-storage.yaml
@@ -261,6 +261,14 @@ resources:
                 snmpd_readonly_user_name: {get_input: snmpd_readonly_user_name}
                 snmpd_readonly_user_password: {get_input: snmpd_readonly_user_password}
 
+  # Hook for site-specific additional pre-deployment config,
+  # applying to all nodes, e.g node registration/unregistration
+  NodeExtraConfig:
+    depends_on: BlockStorageDeployment
+    type: OS::TripleO::NodeExtraConfig
+    properties:
+        server: {get_resource: BlockStorage}
+
   UpdateConfig:
     type: OS::TripleO::Tasks::PackageUpdate
 
