--- a/puppet/swift-storage.yaml
+++ b/puppet/swift-storage.yaml
@@ -214,6 +214,14 @@ resources:
         enable_package_install: {get_param: EnablePackageInstall}
         swift_management_network: {get_attr: [NetIpMap, net_ip_map, {get_param: [ServiceNetMap, SwiftMgmtNetwork]}]}
 
+  # Hook for site-specific additional pre-deployment config,
+  # applying to all nodes, e.g node registration/unregistration
+  NodeExtraConfig:
+    depends_on: SwiftStorageHieraDeploy
+    type: OS::TripleO::NodeExtraConfig
+    properties:
+        server: {get_resource: SwiftStorage}
+
   UpdateConfig:
     type: OS::TripleO::Tasks::PackageUpdate
 
