Add CephStorageExtraConfigPre resource
This change adds a CephStorageExtraConfigPre which can be used
to distribute hooks for the CephStorage nodes.

Change-Id: Id0023d8ffddb3ee5e855d5dcc32c76bc41ce4c63

--- a/puppet/ceph-storage.yaml
+++ b/puppet/ceph-storage.yaml
@@ -172,6 +172,13 @@ resources:
                 ceph::profile::params::cluster_network: {get_input: ceph_cluster_network}
                 ceph::profile::params::public_network: {get_input: ceph_public_network}
 
+  # Hook for site-specific additional pre-deployment config, e.g extra hieradata
+  CephStorageExtraConfigPre:
+    depends_on: CephStorageDeployment
+    type: OS::TripleO::CephStorageExtraConfigPre
+    properties:
+        server: {get_resource: CephStorage}
+
   UpdateConfig:
     type: OS::TripleO::Tasks::PackageUpdate
 
@@ -204,4 +211,8 @@ outputs:
     value: {get_attr: [StorageMgmtPort, ip_address]}
   config_identifier:
     description: identifier which changes if the node configuration may need re-applying
-    value: {get_attr: [CephStorageDeployment, deploy_stdout]}
+    value:
+      list_join:
+      - ','
+      - - {get_attr: [CephStorageDeployment, deploy_stdout]}
+        - {get_attr: [CephStorageExtraConfigPre, deploy_stdout]}
