Added libvirt_vif_driver, ovs_bridge and security_group_api parameters
Made libvirt_vif_driver, ovs_bridge and security_group_api parameters
in nova as configurable parameters through heat templates
Change-Id: I3f355c31a64912baa1a159d59f0fa9089f77b8f4

--- a/overcloud-without-mergepy.yaml
+++ b/overcloud-without-mergepy.yaml
@@ -548,6 +548,10 @@ parameters:
   NovaComputeLibvirtType:
     default: ''
     type: string
+  NovaComputeLibvirtVifDriver:
+    default: ''
+    description: Libvirt VIF driver configuration for the network
+    type: string
   NovaEnableRbdBackend:
     default: false
     description: Whether to enable or not the Rbd backend for Nova
@@ -557,6 +561,14 @@ parameters:
     default: overcloud-compute
     constraints:
       - custom_constraint: glance.image
+  NovaOVSBridge:
+    default: 'br-int'
+    description: Name of integration bridge used by Open vSwitch
+    type: string
+  NovaSecurityGroupAPI:
+    default: 'neutron'
+    description: The full class name of the security API class
+    type: string
   OvercloudComputeFlavor:
     description: Use this flavor
     type: string
@@ -907,9 +919,12 @@ resources:
           NovaComputeDriver: {get_param: NovaComputeDriver}
           NovaComputeExtraConfig: {get_param: NovaComputeExtraConfig}
           NovaComputeLibvirtType: {get_param: NovaComputeLibvirtType}
+          NovaComputeLibvirtVifDriver: {get_param: NovaComputeLibvirtVifDriver}
           NovaEnableRbdBackend: {get_param: NovaEnableRbdBackend}
           NovaPublicIP: {get_attr: [PublicVirtualIP, ip_address]}
           NovaPassword: {get_param: NovaPassword}
+          NovaOVSBridge: {get_param: NovaOVSBridge}
+          NovaSecurityGroupAPI: {get_param: NovaSecurityGroupAPI}
           NtpServer: {get_param: NtpServer}
           RabbitHost: {get_attr: [VipMap, net_ip_map, {get_param: [ServiceNetMap, RabbitMqNetwork]}]}
           RabbitPassword: {get_param: RabbitPassword}
