Deprecate the undercloud templates.
This patch moves the undercloud templates into the deprecated
directory. The Makefile still builds the resulting templates
at the top level so users should not be broken by this
change.

Change-Id: Ibcb87fe31a6894552a5e445b5495e69fdcc2d382

--- a/deprecated/undercloud-source.yaml
+++ b/deprecated/undercloud-source.yaml
@@ -1,4 +1,4 @@
-description: All-in-one baremetal OpenStack and all dependencies.
+description: Deprecated. Use instack-undercloud instead. All-in-one baremetal OpenStack and all dependencies.
 heat_template_version: 2013-05-23
 parameters:
   AdminPassword:
